Changes with Apache 2.5.0

  *) mod_cache_socache: New cache implementation backed by mod_socache
     that replaces mod_mem_cache removed from httpd v2.2. [Graham
     Leggett]

  *) mod_auth_form: Support the expr parser in the
     AuthFormLoginRequiredLocation, AuthFormLoginSuccessLocation and
     AuthFormLogoutLocation directives. [Graham Leggett]

  *) core: Add dirwalk_stat hook.  [Jeff Trawick]

  *) mod_proxy: Allow for persistence of local changes (via the
     balancer-manager) between graceful and normal restarts.
     [Jim Jagielski]

  *) mod_slotmem: New provider function, fgrab(), which forces an
     allocation of a slot. [Jim Jagielski]

  *) mod_proxy_balancer: The nonce is only derived from the UUID iff
     not set via the 'nonce' balancer param. [Jim Jagielski]

  *) mod_lua: Add LuaInputFilter/LuaOutputFilter for creating content
     filters in Lua [Daniel Gruno]

  *) core: Apply length limit when logging Status header values.
     [Jeff Trawick, Chris Darroch]

  *) mod_ssl: Match wildcard SSL certificate names in proxy mode.  
     PR 53006.  [Joe Orton]

  *) WinNT MPM: Store pid and generation for each thread in scoreboard
     to allow tracking of threads from exiting children via mod_status
     or other such mechanisms.  [Jeff Trawick]

  *) mod_ssl: Catch missing or mismatched client cert/key pairs with
     SSLProxyMachineCertificateFile/Path directives.  PR 52212.  
     [Keith Burdis <keith burdis.org>, Joe Orton]

  *) mod_lua: Allow scripts handled by the lua-script handler to return 
     a status code to the client (such as a 302 or a 500) [Daniel Gruno]

  *) mod_proxy_ajp: Fix crash in packet dump code when logging
     with LogLevel trace7 or trace8.  PR 53730.  [Rainer Jung]

  *) mod_cache: Wrong content type and character set when
     mod_cache serves stale content because of a proxy error. 
     PR 53539.  [Rainer Jung, Ruediger Pluem]

  *) mod_lua: Decline handling 'lua-script' if the file doesn't exist,